COP form: Fix IE spacing issue

--- a/public/stylesheets/sass/admin.sass
+++ b/public/stylesheets/sass/admin.sass
@@ -544,6 +544,9 @@ ul.nav_bar
     fieldset
       background: #fff
       
+      p.question_text
+        margin-top: 1em
+      
       // divs for COP form text
       div.hint_toggle
         color= !dark_blue
